--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="custom.css"> 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+            /* un simple comentario sin mas */
             </style>  
     </head>
  <body>
@@ -28,7 +29,7 @@
     
     <div class="texto-izquierda">      
         <pre>
-<b>Miss Eileen Dover</b>
+Miss Eileen Dover
 4321 Cliff Top Edge Dover. 
 CT9 XXX
 UK
@@ -64,20 +65,36 @@ You seem like an intelligent, dedicated researcher, and just the kind of person 
 to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
 <h2>Exotic dance moves</h2>
 <p>Yes, you are right! As part of my post-doctorate work. I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</p>
-<h3>Polynesian chicken dance</h3>
-<pre>   little known but very influential dance dating back as far as 300BC. a whole village would dance around
-    in a circle like chickens, to encourage their livestock or be "fruitful*.</pre> 
-<h3>Icelandic brownian shuffle</h3>
-<pre>   Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which 
-    involved huddling close together in a circle on the floor, and shuffling their bodies around in impcrccptably 
-    tiny, very rapid movements.One of my fellow students used to say that he thought this dance inspired
-    modem styles such as Twerking.</pre>
-<h3>Arctic robot dance</h3>
-<pre>   An interesting example of historic misinformation. English explorers in the 1960s believed to have 
-    discovered a new dance style characterised by "robotic*, stilted movements, being practiced by inhabitants
-    of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this 
-    because they were really cold.
-</pre>
+
+<table border="1">
+    <tr>
+        <td><h3>Polynesian <br> chicken dance</h3></td>
+        <td><p2>   little known but very influential dance dating back as far as 300BC. a whole village would dance around
+            in a circle like chickens, to encourage their livestock or be <q id="a">fruitful</q>.</p2></td>
+    </tr>
+    <tr>
+        <td><h3>Icelandic <br> brownian shuffle</h3></td>
+        <td><p2>   Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which 
+            involved huddling close together in a circle on the floor, and shuffling their bodies around in impcrccptably 
+            tiny, very rapid movements.One of my fellow students used to say that he thought this dance inspired
+            modem styles such as Twerking.</p2></td>
+    </tr>
+    <tr>
+        <td><h3>Arctic <br>robot dance</h3></td>
+        <td><p2>   An interesting example of historic misinformation. English explorers in the 1960s believed to have 
+            discovered a new dance style characterised by <q id="a">robotic</q>, stilted movements, being practiced by inhabitants
+            of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this 
+            because they were really cold.
+        </p2></td>
+    </tr>
+</table>
+
+
+ 
+
+
+
+
 <br>
 <p>For more of my research,see my <a href="https://www.eldiario.es/canariasahora/viajarahora/destino_america/como-llegar-a-cabo-polonio-uruguay-que-ver-fin-de-semana-alojamiento-mejores-restaurantes-precios-temporada-alta-baja-autobus-colectivo-transporte-publico-carpa-acampada-vegetariano-vegano_1_5959909.html">see my exotic dance research page.</a> </p>
 <pre>
